ui: add demo footer

--- a/ui/index.html
+++ b/ui/index.html
@@ -10,9 +10,22 @@
 </head>
 <body>
 
-  <div class="container">
-    <div class="col-md-12">
-      <div id="app">
+  <div class="wrapper">
+    <div class="container">
+      <div class="col-md-12">
+        <div id="app">
+        </div>
+      </div>
+    </div>
+    <div class="push"></div>
+  </div>
+
+  <div class="footer">
+    <div class="container">
+      <div class="row">
+        <ul class="list-inline footer text-center">
+          <p>Demo hosting provided by <a href="https://digitalocean.com/"><img class="img-do-logo" title="DigitalOcean" src="https://digitalocean.com/assets/images/logos-badges/horizontal-black-71af2217.png"></img></a></p>
+        </ul>
       </div>
     </div>
   </div>
