ui: add link to consul in demo footer

--- a/ui/index.html
+++ b/ui/index.html
@@ -24,7 +24,7 @@
     <div class="container">
       <div class="row">
         <ul class="list-inline footer text-center">
-          <p>Demo hosting provided by <a href="https://digitalocean.com/"><img class="img-do-logo" title="DigitalOcean" src="https://digitalocean.com/assets/images/logos-badges/horizontal-black-71af2217.png"></img></a></p>
+          <p><a href="http://www.consul.io">Consul</a> UI Demo hosting provided by <a href="https://digitalocean.com/"><img class="img-do-logo" title="DigitalOcean" src="https://digitalocean.com/assets/images/logos-badges/horizontal-black-71af2217.png"></img></a></p>
         </ul>
       </div>
     </div>
